# sukr

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  flake.nix  netlify.toml  rust-toolchain.toml  treefmt.toml
content/: about.md  collab.md
content/blog/: NixOS Policy Breakdown.md  axiosophism.md  closed-openness.md  code-of-rebellion.md  fuck-it.md  nix-to-eos.md  std.md
content/projects/: cfdyndns.md  eka.md  eos.md  ethic.md  home.md  nixpkgs.md  nosys.md  pc.md  rfc-175.md
deprecated/: config.toml  netlify.toml
deprecated/sass/: colors.scss  custom.scss  fira.scss
docs/: site.toml
docs/content/: _index.md  architecture.md  comparison.md  configuration.md  content-organization.md  getting-started.md  security.md
docs/content/features/: _index.md  css.md  (+7 more)
docs/static/: style.css
docs/templates/: base.html  homepage.html  page.html
patches/dagre_rust/: .cargo_vcs_info.json  Cargo.toml  README.md
queries/: README.md  md-highlights.scm  md-injections.scm  nix-highlights.scm  nix-injections.scm
sites/nrd.sh/: site.toml
src/: config.rs  content.rs  css.rs  error.rs  escape.rs  feed.rs  highlight.rs  main.rs  math.rs  mermaid.rs  render.rs  sitemap.rs  template_engine.rs  templates.rs
static/: style.css
templates/: base.html  homepage.html  page.html
templates/content/: default.html  post.html
templates/section/: blog.html  default.html  projects.html
themes/: README.md  catppuccin_mocha.css  default.css  dracula.css  github_dark.css  github_light.css  gruvbox.css  nord.css  onedark.css  rose_pine.css  snazzy.css  tokyonight.css
(+39 files in other folders)
