[package]
description = "Bespoke static site compiler for nrd.sh"
edition     = "2024"
license     = "MIT"
name        = "nrd-sh"
version     = "0.1.0"

[dependencies]
gray_matter    = "0.2"
maud           = "0.26"
pulldown-cmark = "0.12"
thiserror      = "2"
walkdir        = "2"

# Syntax highlighting
tree-sitter            = "0.26"
tree-sitter-bash       = "0.23"
tree-sitter-c          = "0.24"
tree-sitter-css        = "0.25"
tree-sitter-go         = "0.25"
tree-sitter-highlight  = "0.26"
tree-sitter-html       = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-json       = "0.24"
tree-sitter-nix        = "0.3"
tree-sitter-python     = "0.25"
tree-sitter-rust       = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-yaml       = "0.7"

# CSS processing
lightningcss = "1.0.0-alpha.70"

# Config parsing
katex-rs = "0.2.3"
serde    = { version = "1", features = ["derive"] }
toml     = "0.8"

# Diagram rendering
mermaid-rs-renderer = { git = "https://github.com/1jehuang/mermaid-rs-renderer", default-features = false }
